--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+backports.zoneinfo==0.2.1
 bcrypt==3.2.0
 blinker==1.4
 cffi==1.15.0
@@ -18,6 +19,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 Pillow==9.0.0
+psycopg==3.0.7
 pycparser==2.21
 six==1.16.0
 SQLAlchemy==1.4.29
