--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Jinja2==3.0.3
 MarkupSafe==2.0.1
 Pillow==9.0.0
 psycopg==3.0.7
+psycopg2-binary==2.9.3
 pycparser==2.21
 six==1.16.0
 SQLAlchemy==1.4.29
